--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -40,11 +40,10 @@
 		<nohttp-checkstyle.version>0.0.2.RELEASE</nohttp-checkstyle.version>
 		<disable.nohttp.checks>true</disable.nohttp.checks>
 		<spring-javaformat-checkstyle.version>0.0.7</spring-javaformat-checkstyle.version>
-		<spring-boot.version>2.3.6.RELEASE</spring-boot.version>
+		<spring-boot.version>2.3.7.BUILD-SNAPSHOT</spring-boot.version>
 		<spring-kafka.version>2.5.8.RELEASE</spring-kafka.version>
 		<spring-rabbit.version>2.2.12.RELEASE</spring-rabbit.version>
 		<spring-cloud-function.version>3.0.12.RELEASE</spring-cloud-function.version>
-		<spring-integration-dependencies.version>5.3.4.RELEASE</spring-integration-dependencies.version>
 		<test-containers.version>1.15.0</test-containers.version>
 		<maven-flatten-plugin.version>1.2.5</maven-flatten-plugin.version>
 		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
@@ -52,14 +51,6 @@
 
 	<dependencyManagement>
 		<dependencies>
-			<!-- Adding SI bom here is temporary to address some issues. It should come from Boot dependencies -->
-			<dependency>
-				<groupId>org.springframework.integration</groupId>
-				<artifactId>spring-integration-bom</artifactId>
-				<version>${spring-integration-dependencies.version}</version>
-				<scope>import</scope>
-				<type>pom</type>
-			</dependency>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-function-dependencies</artifactId>
