Upgrade Spring Boot to 2.3.7.RELEASE

--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -40,8 +40,8 @@
 		<nohttp-checkstyle.version>0.0.2.RELEASE</nohttp-checkstyle.version>
 		<disable.nohttp.checks>true</disable.nohttp.checks>
 		<spring-javaformat-checkstyle.version>0.0.7</spring-javaformat-checkstyle.version>
-		<spring-boot.version>2.3.7.BUILD-SNAPSHOT</spring-boot.version>
-		<spring-kafka.version>2.5.8.RELEASE</spring-kafka.version>
+		<spring-boot.version>2.3.7.RELEASE</spring-boot.version>
+		<spring-kafka.version>2.5.10.RELEASE</spring-kafka.version>
 		<spring-rabbit.version>2.2.12.RELEASE</spring-rabbit.version>
 		<spring-cloud-function.version>3.0.12.RELEASE</spring-cloud-function.version>
 		<test-containers.version>1.15.0</test-containers.version>
