--- a/spring-cloud-dataflow-apps-generator-plugin/pom.xml
+++ b/spring-cloud-dataflow-apps-generator-plugin/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>org.springframework.cloud</groupId>
     <artifactId>spring-cloud-dataflow-apps-plugin-parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0-RC2</version>
     <relativePath>..</relativePath>
   </parent>
 
