--- a/applications/processor/pom.xml
+++ b/applications/processor/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.springframework.cloud.stream.app</groupId>
     <artifactId>processor</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0-RC2</version>
     <packaging>pom</packaging>
 
     <modules>
