--- a/applications/processor/semantic-segmentation-processor/pom.xml
+++ b/applications/processor/semantic-segmentation-processor/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>semantic-segmentation-processor</artifactId>
-    <version>3.0.0-RC2</version>
+    <version>3.0.0-SNAPSHOT</version>
     <name>semantic-segmentation-processor</name>
     <description>Semantic Segmentation (tensorflow) processor apps</description>
     <packaging>jar</packaging>
