--- a/applications/sink/pgcopy-sink/pom.xml
+++ b/applications/sink/pgcopy-sink/pom.xml
@@ -3,7 +3,7 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>pgcopy-sink</artifactId>
-	<version>3.0.0-RC2</version>
+	<version>3.0.0-SNAPSHOT</version>
 	<name>pgcopy-sink</name>
 	<description>pgcopy sink apps</description>
 	<packaging>jar</packaging>
