--- a/applications/sink/tasklauncher-sink/pom.xml
+++ b/applications/sink/tasklauncher-sink/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>tasklauncher-sink</artifactId>
-    <version>3.0.0-RC2</version>
+    <version>3.0.0-SNAPSHOT</version>
     <name>tasklauncher-sink</name>
     <description>tasklauncher sink app</description>
     <packaging>jar</packaging>
