--- a/applications/source/s3-source/pom.xml
+++ b/applications/source/s3-source/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>s3-source</artifactId>
-    <version>3.0.0-RC2</version>
+    <version>3.0.0-SNAPSHOT</version>
     <name>s3-source</name>
     <description>s3 source apps</description>
     <packaging>jar</packaging>
