stream-applications-release-train release: 2020.0.0

--- a/stream-applications-release-train/stream-applications-descriptor/pom.xml
+++ b/stream-applications-release-train/stream-applications-descriptor/pom.xml
@@ -42,7 +42,7 @@
                             <source><![CDATA[
         pom.properties['repo-spring-io']=
                 "${jdbc-source.version}".contains('SNAPSHOT') ? 'repo.spring.io/snapshot' :
-                        "${jdbc-source.version}".contains('-') ? 'repo.spring.io/milestone' : 'repo.spring.io/release'
+                        "${jdbc-source.version}".contains('-') ? 'repo.spring.io/milestone' : 'repo.maven.apache.org/maven2'
         pom.properties['cdc-debezium-source-docker.tag']=
                 "${cdc-debezium-source.version}".contains('SNAPSHOT') ? 'latest' : "${cdc-debezium-source.version}"
         pom.properties['file-source-docker.tag']=
