--- a/applications/stream-applications-core/pom.xml
+++ b/applications/stream-applications-core/pom.xml
@@ -11,12 +11,12 @@
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
         <artifactId>stream-applications-build</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
     <properties>
-        <revision>3.0.1</revision>
+        <revision>3.0.2-SNAPSHOT</revision>
         <stream-apps-core.version>${revision}</stream-apps-core.version>
         <java-functions.version>1.0.0</java-functions.version>
         <apps.base-image>springcloud/baseimage:1.0.0</apps.base-image>
