--- a/spring-cloud-dataflow-apps-generator-plugin/src/test/resources/unit/http-source-apps/pom.xml
+++ b/spring-cloud-dataflow-apps-generator-plugin/src/test/resources/unit/http-source-apps/pom.xml
@@ -89,6 +89,11 @@
 											<version>${stream-apps-core.version}</version>
 										</dependency>
 										<dependency>
+											<groupId>org.springframework.cloud.stream.app</groupId>
+											<artifactId>stream-applications-postprocessor-common</artifactId>
+											<version>3.0.0-SNAPSHOT</version>
+										</dependency>
+										<dependency>
 											<groupId>io.micrometer</groupId>
 											<artifactId>micrometer-registry-influx</artifactId>
 										</dependency>
