Introduce basic support for user-configurable sorting of the remote file list.

--- a/applications/source/sftp-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/applications/source/sftp-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -1,5 +1,6 @@
 configuration-properties.classes=org.springframework.cloud.fn.supplier.sftp.SftpSupplierProperties, \
-  org.springframework.cloud.fn.supplier.sftp.SftpSupplierProperties$Factory,\
+  org.springframework.cloud.fn.supplier.sftp.SftpSupplierProperties$Factory, \
+  org.springframework.cloud.fn.supplier.sftp.SftpSupplierProperties$SortSpec, \
   org.springframework.cloud.fn.common.file.FileConsumerProperties, \
   org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties, \
   org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$Gemfire, \
@@ -8,3 +9,4 @@ configuration-properties.classes=org.springframework.cloud.fn.supplier.sftp.Sftp
   org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$Jdbc, \
   org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$Zookeeper, \
   org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$Mongo \
+
