--- a/applications/source/sftp-source/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
+++ b/applications/source/sftp-source/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
@@ -1,5 +1,6 @@
 configuration-properties.classes=org.springframework.cloud.fn.supplier.sftp.SftpSupplierProperties, \
-  org.springframework.cloud.fn.supplier.sftp.SftpSupplierProperties$Factory,\
+  org.springframework.cloud.fn.supplier.sftp.SftpSupplierProperties$Factory, \
+  org.springframework.cloud.fn.supplier.sftp.SftpSupplierProperties$SortSpec, \
   org.springframework.cloud.fn.common.file.FileConsumerProperties, \
   org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties, \
   org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$Gemfire, \
