Use Spring Test Data Geode instead of containerized geode server
Use spring test data geode in the geode integration tests
test to fork a separate geode process, instead of running
a geode server in a docker container.

STDG is faster than launching Geode through gfsh inside of a container.
- It doesn't run in docker
- It doesn't start management components necessary for gfsh
- It doesn't start extra gfsh shell processes

Removing the GeodeContainer test utility

--- a/applications/source/geode-source/pom.xml
+++ b/applications/source/geode-source/pom.xml
@@ -35,10 +35,12 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.cloud.fn</groupId>
-            <artifactId>function-test-support</artifactId>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-geode-test</artifactId>
+            <version>${spring-data-geode-test.version}</version>
             <scope>test</scope>
         </dependency>
+
 
     </dependencies>
 
