--- a/functions/consumer/geode-consumer/pom.xml
+++ b/functions/consumer/geode-consumer/pom.xml
@@ -31,11 +31,10 @@
             <artifactId>config-common</artifactId>
             <version>${project.version}</version>
         </dependency>
-
         <dependency>
-            <groupId>org.springframework.cloud.fn</groupId>
-            <artifactId>function-test-support</artifactId>
-            <version>${revision}</version>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-geode-test</artifactId>
+            <version>${spring-data-geode-test.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
