--- a/functions/supplier/geode-supplier/pom.xml
+++ b/functions/supplier/geode-supplier/pom.xml
@@ -55,9 +55,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.cloud.fn</groupId>
-            <artifactId>function-test-support</artifactId>
-            <version>${project.version}</version>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-geode-test</artifactId>
+            <version>${spring-data-geode-test.version}</version>
             <scope>test</scope>
         </dependency>
 
