Use Spring Test Data Geode instead of containerized geode server
Use spring test data geode in the geode integration tests
test to fork a separate geode process, instead of running
a geode server in a docker container.

STDG is faster than launching Geode through gfsh inside of a container.
- It doesn't run in docker
- It doesn't start management components necessary for gfsh
- It doesn't start extra gfsh shell processes

Removing the GeodeContainer test utility

--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -44,6 +44,7 @@
 		<spring-kafka.version>2.5.11.RELEASE</spring-kafka.version>
 		<spring-rabbit.version>2.2.15.RELEASE</spring-rabbit.version>
 		<spring-cloud-function.version>3.0.14.BUILD-SNAPSHOT</spring-cloud-function.version>
+		<spring-data-geode-test.version>0.0.21.RELEASE</spring-data-geode-test.version>
 		<test-containers.version>1.15.2</test-containers.version>
 		<maven-flatten-plugin.version>1.2.5</maven-flatten-plugin.version>
 		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
