Fix cdc logging classpath issue
 - Exclude a slf4j-log4j12 dependency inherited by slf4j-log4j12 that clashes with the spring boot logging.

--- a/functions/common/cdc-debezium-common/pom.xml
+++ b/functions/common/cdc-debezium-common/pom.xml
@@ -28,6 +28,12 @@
 			<groupId>io.debezium</groupId>
 			<artifactId>debezium-embedded</artifactId>
 			<version>${version.debezium}</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>slf4j-log4j12</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
