--- a/functions/supplier/mongodb-supplier/pom.xml
+++ b/functions/supplier/mongodb-supplier/pom.xml
@@ -34,6 +34,12 @@
 
         <dependency>
             <groupId>org.springframework.cloud.fn</groupId>
+            <artifactId>config-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud.fn</groupId>
             <artifactId>splitter-function</artifactId>
             <version>${project.version}</version>
         </dependency>
