--- a/applications/sink/analytics-sink/pom.xml
+++ b/applications/sink/analytics-sink/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>analytics-sink</artifactId>
-    <version>3.0.1</version>
+    <version>3.0.2-SNAPSHOT</version>
     <name>analytics-sink</name>
     <description>Analytics sink apps</description>
     <packaging>jar</packaging>
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
         <artifactId>stream-applications-core</artifactId>
-        <version>3.0.3</version>
+        <version>3.0.4-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
