Fix filter processor issues
Update fiilter processor to add an extra processing at the end of the chain
to convert the receeived text data into byte[].

See the previous commit message for more details.

--- a/applications/processor/filter-processor/pom.xml
+++ b/applications/processor/filter-processor/pom.xml
@@ -37,7 +37,7 @@
                         <type>processor</type>
                         <version>${project.version}</version>
                         <configClass>org.springframework.cloud.fn.filter.FilterFunctionConfiguration.class</configClass>
-                        <functionDefinition>byteArrayTextToString|filterFunction</functionDefinition>
+                        <functionDefinition>byteArrayTextToString|filterFunction|filterPostProcessFunction</functionDefinition>
                         <maven>
                             <dependencies>
                                 <dependency>
