Revert "Fix filter processor issues"
This reverts commit d8c75d5677e94be3ed5c95313be7fad3939dec12.

--- a/applications/processor/filter-processor/pom.xml
+++ b/applications/processor/filter-processor/pom.xml
@@ -37,7 +37,7 @@
                         <type>processor</type>
                         <version>${project.version}</version>
                         <configClass>org.springframework.cloud.fn.filter.FilterFunctionConfiguration.class</configClass>
-                        <functionDefinition>byteArrayTextToString|filterFunction|filterPostProcessFunction</functionDefinition>
+                        <functionDefinition>byteArrayTextToString|filterFunction</functionDefinition>
                         <maven>
                             <dependencies>
                                 <dependency>
