--- a/stream-applications-release-train/stream-applications-descriptor/pom.xml
+++ b/stream-applications-release-train/stream-applications-descriptor/pom.xml
@@ -20,7 +20,9 @@
                     <include>META-INF/kafka-apps-maven.properties</include>
                     <include>META-INF/rabbit-apps-maven.properties</include>
                     <include>META-INF/kafka-apps-docker.properties</include>
+                    <include>META-INF/kafka-apps-harbor.properties</include>
                     <include>META-INF/rabbit-apps-docker.properties</include>
+                    <include>META-INF/rabbit-apps-harbor.properties</include>
                     <include>META-INF/kafka-apps-maven-repo-url.properties</include>
                     <include>META-INF/rabbit-apps-maven-repo-url.properties</include>
                 </includes>
