Fix issues with message conversion in mongodb sink
Fore more info see: https://stackoverflow.com/questions/67131500/mongodb-sink-issue-while-writing-a-json-data-from-http-source

Resolves https://github.com/spring-cloud/stream-applications/issues/165

This commit also addresses a doc update for sftp-source

--- a/applications/sink/mongodb-sink/pom.xml
+++ b/applications/sink/mongodb-sink/pom.xml
@@ -53,13 +53,16 @@
                         <version>${project.version}</version>
                         <configClass>org.springframework.cloud.fn.consumer.mongo.MongoDbConsumerConfiguration.class
                         </configClass>
-                        <functionDefinition>mongodbConsumer</functionDefinition>
-
+                        <functionDefinition>byteArrayTextToString|mongodbConsumer</functionDefinition>
                         <maven>
                             <dependencies>
                                 <dependency>
                                     <groupId>org.springframework.cloud.fn</groupId>
                                     <artifactId>mongodb-consumer</artifactId>
+                                </dependency>
+                                <dependency>
+                                    <groupId>org.springframework.cloud.fn</groupId>
+                                    <artifactId>payload-converter-function</artifactId>
                                 </dependency>
                             </dependencies>
                         </maven>
