--- a/applications/processor/header-enricher-processor/pom.xml
+++ b/applications/processor/header-enricher-processor/pom.xml
@@ -6,12 +6,12 @@
     <artifactId>header-enricher-processor</artifactId>
     <name>header-enricher-processor</name>
     <description>header-enricher processor apps</description>
-    <version>3.0.2-SNAPSHOT</version>
+    <version>3.0.2</version>
 
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
         <artifactId>stream-applications-core</artifactId>
-        <version>3.0.4-SNAPSHOT</version>
+        <version>3.0.4</version>
         <relativePath/>
     </parent>
 
